fix div-box overflow style

--- a/public/sass/index.scss
+++ b/public/sass/index.scss
@@ -5,7 +5,9 @@ $tablet-size: 751px;
 @mixin boxProps{
   margin: 1em auto;
   padding: 20px 20px 20px 20px;
-  overflow-y: scroll;
+  overflow-y:auto;
+    display:flex;
+  flex-column:column;
   @media screen and (max-width:$phone-size) {
     width: 100%;
     height:300px;
@@ -26,7 +28,6 @@ html,body{
   background-color:#EBEDEF  ;
   width: 90%;
   height: 100vh;
-
   @media screen and (max-width:$phone-size) {
   height:100%;
 }
